# arxiv2md

./: .gitignore  DEPLOYMENT_STEPS.md  DIGITALOCEAN_DEPLOYMENT.md  LICENSE  QUICK_REFERENCE.md  README.md  TODO.md  TODO_AGENT.md  arxiv2md.service  deploy.sh  docker-compose.yml  pyproject.toml  requirements.txt  update.sh
.github/workflows/: deploy.yml
arxiv2md/src/.arxiv2md_cache/2501.11120__v1/: source.html
arxiv2md/src/arxiv2md/: __main__.py
arxiv2md/src/server/templates/components/: arxiv_form.jinja
arxiv2md/src/static/js/: utils.js
arxiv2md/tests/: conftest.py  test_html_parser.py  test_markdown.py  test_query_parser.py
src/arxiv2md/: __init__.py  __main__.py  fetch.py  ingestion.py  markdown.py  query_parser.py
src/arxiv2md/schemas/: query.py
src/arxiv2md/utils/: logging_config.py
src/server/: form_types.py  main.py  models.py  query_processor.py
src/server/routers/: __init__.py  dynamic.py  markdown_api.py
src/server/templates/: arxiv.jinja
src/server/templates/components/: arxiv_form.jinja
tests/: conftest.py  test_markdown.py
